--- a/index.html
+++ b/index.html
@@ -5,31 +5,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="format-detection" content="telephone=no">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="fav.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="icon.png">
+  <link rel="icon" type="image/png" href="./images/icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./images/icon.png">
   <title>ページのタイトル</title>
   <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700&display=swap" rel="stylesheet">
-  <link rel="canonical" href="ここに正規化するURL" />
-  <meta name="description" content="ページの解説">
+  <link rel="canonical" href="https://www.slicetimecam.jp/" />
+  <meta name="description" content="SliceTimeCam is a camera app that allows you to shoot slit-scan video. Operate the SliceLine, hold the device steady and shoot, and enjoy the artistic changes. You can set the filter, countdown, resolution, and slit size. (Flick left or right to change filters). Take pictures of people, animals, cars, or anything else you like, control SliceLine, and take pictures like you've never seen before.  ">
   <meta property='og:locale' content="ja_JP">
-  <meta property="fb:app_id" content="Facebook App ID" />
   <meta property='og:site_name' content="SliceTimeCam">
-  <meta property='og:title' content="ページのタイトル">
+  <meta property='og:title' content="SliceTimeCam">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="ツイッターアカウント">
-  <meta property="og:description" content="ページの解説">
-  <meta property="og:url" content="ページのURL">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="シェアされたときに表示する画像"> </head>
+  <meta name="twitter:site" content="slicetimecam">
+  <meta property="og:description" content="SliceTimeCam is a camera app that allows you to shoot slit-scan video. Operate the SliceLine, hold the device steady and shoot, and enjoy the artistic changes. You can set the filter, countdown, resolution, and slit size. (Flick left or right to change filters). Take pictures of people, animals, cars, or anything else you like, control SliceLine, and take pictures like you've never seen before. ">
+  <meta property="og:url" content="https://www.slicetimecam.jp/">
+  <meta property="og:type" content="https://www.slicetimecam.jp/">
+  <meta property="og:image" content="./images/icon.png"> </head>
 <body>
   <header class="header">
     <h1 class="header__ttl">SliceTimeCam</h1>
     <nav class="gnav">
       <ul class="gnav__list">
-        <li class="gnav__item"><a class="gnav__link" href="#about">About</a></li>
-        <li class="gnav__item"><a class="gnav__link" href="#price">Privacy Policy</a></li>
-        <li class="gnav__item"><a class="gnav__link" href="#recruit">Terms of Use</a></li>
+        <li class="gnav__item"><a class="gnav__link" href="#otherLink">Contact</a></li>
+        <li class="gnav__item"><a class="gnav__link" href="./privacypolicy.html">Privacy Policy</a></li>
+        <li class="gnav__item"><a class="gnav__link" href="./terms.html">Terms of Use</a></li>
       </ul>
       <!-- /.gnav -->
     </nav>
@@ -38,12 +37,14 @@
   <main>
     <section class="fv">
       <div class="fv__container">
-        <h2 class="fv__ttl">SliceTimeCam</h2>
+        <a href=""><img src="./images/icon.png" class="icon_img"></a>
+        <h2 class="fv__ttl">SliceTimeCam📸</h2>
+        <h3>SlitScan Camera App</h3>
       </div>
       <ul id="gallery">
-        <a href=""><img src="./images/appstore_download.png" class="store_img"></a>
-        <a href=""><img src="./images/googleplay_download.png" class="store_img"></a>
-        <a href=""><img src="./images/huawei_download.png" class="store_img"></a>
+        <a href="https://apps.apple.com/app/id1584533462"><img src="./images/appstore_download.png" class="store_img"></a>
+        <a href="https://play.google.com/store/apps/details?id=com.jp.koyoarai.SliceTimeCam"><img src="./images/googleplay_download.png" class="store_img"></a>
+        <a href="https://appgallery.huawei.com/#/app/C104934843"><img src="./images/huawei_download.png" class="store_img"></a>
       </ul>
     </section>
     <section class="about" id="about">
@@ -53,41 +54,56 @@
           Operate the SliceLine, hold the device steady and shoot, and enjoy the artistic changes.
           You can set the filter, countdown, resolution, and slit size. (Flick left or right to change filters).
           Take pictures of people, animals, cars, or anything else you like, control SliceLine, and take pictures like you've never seen before.  </p>
-        <ul class="about__list">
-          <li class="about__item">
+
+          <div class="youtube">
+            <iframe src="https://www.youtube.com/embed/xIOG7JGj5rc?autoplay=1&mute=1&playsinline=1&loop=1&playlist=xIOG7JGj5rc&&disablekb=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <div class="youtube">
+            <iframe src="https://www.youtube.com/embed/_BVRlVS--WA?autoplay=1&mute=1&playsinline=1&loop=1&playlist=_BVRlVS--WA&disablekb=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+
+          <!-- <li class="about__item">
             <div class="about__img"><img src="https://placehold.jp/120/cccccc/666666/1024x768.png?text=IMAGE" alt=""></div>
             <div class="about__contents">
-              <h3 class="about__subttl">ポイント1</h3>
-              <p class="about__subdesc">説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 </p>
+              <h3 class="about__subttl">ポイント</h3>
+              <p class="about__subdesc">説明</p>
             </div>
           </li>
           <li class="about__item">
             <div class="about__img is-2"><img src="https://placehold.jp/120/cccccc/666666/1024x768.png?text=IMAGE" alt=""></div>
             <div class="about__contents is-2">
               <h3 class="about__subttl">ポイント2</h3>
-              <p class="about__subdesc">説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 </p>
+              <p class="about__subdesc">説明</p>
             </div>
-          </li>
-          <li class="about__item">
-            <div class="about__img"><img src="https://placehold.jp/120/cccccc/666666/1024x768.png?text=IMAGE" alt=""></div>
-            <div class="about__contents">
-              <h3 class="about__subttl">ポイント3</h3>
-              <p class="about__subdesc">説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 説明 </p>
-            </div>
-          </li>
+          </li> -->
         </ul>
         <!-- /.container -->
       </div>
       <!-- /.about -->
     </section>
-    <section class="recruit" id="recruit">
-      <div class="recruit__container section__container">
-        <h2 class="recruit__ttl section__ttl">RECRUIT</h2>
-        <p class="recruit__desc"> 採用についてのかんたんな説明 採用についてのかんたんな説明 採用についてのかんたんな説明 採用についてのかんたんな説明 採用についてのかんたんな説明 採用についてのかんたんな説明 採用についてのかんたんな説明 採用についてのかんたんな説明 採用についてのかんたんな説明 </p> <a href="" class="recruit__more">採用情報の一覧</a> </div>
-    </section>
+    <section class="otherLink" id="otherLink">
+      <div class="otherLink__container section__container">
+        <h2 class="otherLink__ttl section__ttl">CONTACT</h2>
+        <p class="otherLink__desc"> Please contact us at the following SNS accounts.</p>
+        <p class="otherLink__desc"> Please feel free to mention the video on IG @slicetimecam :) I will repost it :) </p>
+        <div class="otherLink__li">
+          <a href="https://www.instagram.com/slicetimecam/" class="otherLink__page">@slicetimecam</a>
+          <a href="https://www.instagram.com/koyoarai_/" class="otherLink__page">IG @koyoarai_</a>
+          <a href="https://twitter.com/koyoarai_" class="otherLink__page">Twi @koyoarai_</a>
+        </div>
+      </div>
+      </section>
     <!-- /.main -->
   </main>
-  <footer class="footer"> <small class="footer__copy">© 2020 SIMPLE LP TEMPLATE Inc.
+  <footer class="footer">
+  <small class="footer__copy">© 2022 SliceTimeCam | Koyo Arai</small>
+  <div class="footer__li">
+    <a href="./privacypolicy.html" class="footer__page">Privacy Policy</a>
+    <a href="privacypolicy_ja.html" class="footer__page">Privacy Policy(日本語)</a>
+    <a href="./terms.html" class="footer__page">Terms of Use</a>
+    <a href="./terms_ja.html" class="footer__page">Terms of Use (日本語)</a>
+  </div>
+  </footer>
 
 </small>
     <!-- /.footer -->
