--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="./images/icon.png">
   <link rel="apple-touch-icon" sizes="180x180" href="./images/icon.png">
-  <title>ページのタイトル</title>
+  <title>SliceTimeCam</title>
   <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700&display=swap" rel="stylesheet">
   <link rel="canonical" href="https://www.slicetimecam.jp/" />
