--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta property="og:description" content="SliceTimeCam is a camera app that allows you to shoot slit-scan video. Operate the SliceLine, hold the device steady and shoot, and enjoy the artistic changes. You can set the filter, countdown, resolution, and slit size. (Flick left or right to change filters). Take pictures of people, animals, cars, or anything else you like, control SliceLine, and take pictures like you've never seen before. ">
   <meta property="og:url" content="https://www.slicetimecam.jp/">
   <meta property="og:type" content="https://www.slicetimecam.jp/">
-  <meta property="og:image" content="./images/icon.png">
+  <meta property="og:image" content="https://www.slicetimecam.jp/images/icon.png">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-9S6ZCQQ045"></script>
