--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         <h2 class="otherLink__ttl section__ttl">CONTACT</h2>
         <p class="otherLink__desc"> Please contact us at the following SNS accounts.</p>
         <p class="otherLink__desc"> Please feel free to mention the video on IG @slicetimecam :) I will repost it :) </p>
+        <p class="otherLink__desc"> mail : info@reflectionthroughdesign.com </p>
         <div class="otherLink__li">
           <a href="https://www.instagram.com/slicetimecam/" class="otherLink__page">@slicetimecam</a>
           <a href="https://www.instagram.com/koyoarai_/" class="otherLink__page">IG @koyoarai_</a>
